advances on traductions

--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -34,6 +34,14 @@
   "nosotros": {
     "title": "We are a company legally incorporated in Paraguay, dedicated to the development and optimization of mining activity. We provide them with the tool of tokenization of certified lithium reserves, seeking to innovate and revolutionize the electromobility industry. ",
     "title p1": "By converting lithium reserves into digital tokens, we make it easier for the mining industry to finance its operations, contributing to the development of its comprehensive activity, and the transition towards a more sustainable future.",
+    "p1": "We are a legally established company in the Republic of Paraguay, dedicated to the development and optimization of mining activity, particularly lithium mining.",
+    "p2": "We contribute to the mining activity by providing the tool of tokenization (of its certified lithium reserves), aiming to innovate and revolutionize the global electromobility industry. By converting these certified lithium reserves into digital tokens, we facilitate the industry's financing. This contributes to the overall development of its activity and the transition towards a more sustainable future.",
+    "p3": "The Atómico3 token, under the symbol 'AT3', is designed to represent the tokenization of lithium reserves. The current issuance of AT3 is 100,000,000,000 tokens, each backed by certified lithium reserves in accordance with international NI 43-101 standards.",
+    "p4": "The blockchain contract backing this issuance is number: 0X22A79A08DDB74A9F1A4EBE5DA75300AD9F1AED76, ensuring the integrity and transparency of the underlying assets.",
+    "p5": "The company uses an innovative model of tokenization of real-world assets (RWA) to facilitate the integration of natural resources into the digital economy.",
+    "p6": "The brand and patent associated with this model are registered under the ownership of Atómico 3 SA's CEO-Founder, Lic. Pablo Rutigliano, with international class code number 9. All rights related to the brand and model are formally registered and are for the exclusive use of Atómico 3 S.A.",
+    "p7": "Thus, AT3 is set to develop its prices based on mining reserves, establishing a direct relationship between AT3 (Atómico3) and the price of Li₂CO₃ (battery-grade lithium carbonate). In conclusion, 1 AT3 will be equivalent to the price of 1 kilogram of lithium carbonate.",
+    "p8": "The collaboration between governments, businesses, and communities, along with clear and effective legal regulation, will be crucial to ensure the success of this transition towards a cleaner and fairer economy. We aim to transform the global lithium market by seeking to declare it a commodity.",
     "Nuestros Valores": "Our Core Values",
     "Propósito": "Purpose",
     "Propósito descripcion": "Contribute to the development of mining activity in Latin America through the tokenization of mining assets, collaborating in being the financial tool for the development of mining.",
