--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -34,6 +34,7 @@
   "nosotros": {
     "title": "We are a company legally incorporated in Paraguay, dedicated to the development and optimization of mining activity. We provide them with the tool of tokenization of certified lithium reserves, seeking to innovate and revolutionize the electromobility industry. ",
     "title p1": "By converting lithium reserves into digital tokens, we make it easier for the mining industry to finance its operations, contributing to the development of its comprehensive activity, and the transition towards a more sustainable future.",
+    "nosotros": "About Us",
     "p1": "We are a legally established company in the Republic of Paraguay, dedicated to the development and optimization of mining activity, particularly lithium mining.",
     "p2": "We contribute to the mining activity by providing the tool of tokenization (of its certified lithium reserves), aiming to innovate and revolutionize the global electromobility industry. By converting these certified lithium reserves into digital tokens, we facilitate the industry's financing. This contributes to the overall development of its activity and the transition towards a more sustainable future.",
     "p3": "The Atómico3 token, under the symbol 'AT3', is designed to represent the tokenization of lithium reserves. The current issuance of AT3 is 100,000,000,000 tokens, each backed by certified lithium reserves in accordance with international NI 43-101 standards.",
