--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -31,6 +31,7 @@
   },
   "nosotros": {
     "title": "Somos una compañía legalmente constituida en Paraguay, dedicada al desarrollo y optimización de la actividad minera. Les aportamos la herramienta de la tokenización de las reservas de litio certificadas, buscando con esto innovar y revolucionar la industria de la electromovilidad. ",
+    "nosotros": "Nosotros",
     "title p1": "Al convertir las reservas de litio en tokens digitales, les facilitamos a la industria minera la financiación de su operatoria, contribuyendo al desarrollo de su actividad integral, y a la transición hacia un futuro más sostenible.",
     "p1": "Somos una compañía legalmente constituida en la Republica del Paraguay, dedicados al desarrollo y optimización de la actividad minera. En particular a la minería del Litio.",
     "p2": "Aportamos a la actividad Minera, la herramienta de la tokenización (de sus reservas de litio certificadas), buscando con esto innovar y revolucionar la industria de la electromovilidad a nivel mundial.Mediante la conversión de dichas reservas de litio certificadas en tokens digitales, facilitamos a la industria la financiación de su operatoria. Contribuyendo al desarrollo de su actividad integral, y a la transición hacia un futuro más sostenible. ",
