--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -195,7 +195,14 @@
     "Desarrollador Web2": "Web2 Developer"
   },
   "invertir": {
-    "como invertir": "How to invest in Atómico3?",
+    "inverti y ahorra": "Invest and save with Atómico3",
+    "p1": "We will explain why you should invest and save with our project.",
+    "p2": "Today, you can invest in our project in three different ways:",
+    "modalidad 1": "By staking",
+    "modalidad 2": "Buying Atomics (AT3) in Peer to Peer with the official wallet",
+    "modalidad 3": "Buy new AT3 and take advantage of the different promotions.",
+    "invertir": "Invest",
+    "como invertir en atomico3": "How to invest in Atómico3?",
     "como invertir p1": "At Atómico3 you can invest in 4 different modalities: Staking, Peer to Peer or Buy AT3",
     "como invertir p2": "Here we will teach you how to do each of them. Click on the button below!",
     "ver tutoriales": "Watch Tutorials"
