--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -192,14 +192,20 @@
     "Desarrollador Web2": "Desarrollador Web2"
   },
   "invertir": {
-    "como invertir": "¿Cómo Invertir en Atómico3?",
+    "inverti y ahorra": "Invertí y ahorrá en Atómico3",
+    "p1": "Te vamos a explicar porque tenes que invertir y ahorrar con nuestro Proyecto.",
+    "p2": "Hoy podes invertir en nuestro Proyecto en tres modalidades diferentes:",
+    "modalidad 1": " Haciendo Staking",
+    "modalidad 2": "Comprando Atómicos (AT3) en Peer to Peer con la billetera oficial",
+    "modalidad 3": "Comprar AT3 nuevos y sumarte a las diferentes promos.",
+    "invertir": "Invertir",
+    "como invertir en atomico3": "¿Cómo Invertir en Atómico3?",
     "como invertir p1": "En Atómico3 puedes invertir en 4 modalidades diferentes: Staking, Peer to Peer o Comprar AT3",
     "como invertir p2": "Aquí te enseñaremos cómo realizar cada una de ellas ¡Cliquea en el botón de abajo!",
     "ver tutoriales": "Ver Tutoriales"
   },
   "como invertir": {
     "inverti y ahorra": "Invertí y ahorrá en Atómico3",
-
     "como invertir": "¿Cómo Invertir en Atómico3?",
     "como invertir p1": "En esta seccion te vamos a explicar las diferentes maneras que tenes hoy de invertir en nuestro proyecto.",
     "como invertir p1.1": "Debajo vas a encontrar la información detallada de cada una de ellas, los videos tutoriales y el paso a paso de como hacerlo.",
