secciones traducidas y responsive

--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -74,6 +74,11 @@
   },
   "atomicInfo": {
     "que es atomico": "What is Atómico3?",
+    "p1": "It is a token that represents the tokenization of mining assets, tied to an underlying asset, Lithium (backed by lithium reserves certified under NI 43-101 standards), that each Project holds.",
+    "p2": "This process of digitizing lithium reserves allows for their commercialization on blockchain platforms, democratizing access to investment in natural resources, offering transparency, security, and liquidity.",
+    "p3": "With its innovative approach, we have facilitated sustainable investment and economic development in lithium-rich regions, positioning it as a high-value digital asset in the global market.",
+    "p4": "Our official wallet is ",
+    "p5": "Our POLYGON contract is ",
     "descripcion atomico p1": " Atómico3 is a token that represents the tokenization of mining assets, backed by lithium reserves certified under ni 43-101 standards. This process digitizes lithium reserves, allowing them to be traded on blockchain platforms.",
     "descripcion atomico p2": "Atómico3 democratizes access to investment in natural resources, offering transparency, security and liquidity. With its innovative approach, Atómico3 facilitates sustainable investment and economic development in lithium-rich regions, positioning it as a high-value digital asset in the global market.",
     "criptoactivo responsable": "Responsible Cryptoasset",
