--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -71,6 +71,11 @@
   },
   "atomicInfo": {
     "que es atomico": "¿Qué es Atómico3?",
+    "p1": "Es un token que representa la tokenización de los activos mineros, atados a un subyacente el Litio (respaldados por las reservas de litio certificadas bajo normas NI 43-101), que tiene cada Proyecto. ",
+    "p2":"Este proceso de digitalizar las reservas de litio, permite su comercialización en plataformas blockchain. Democratizado el acceso a la inversión en recursos naturales, ofreciendo transparencia, seguridad y liquidez. ",
+    "p3": " Con su enfoque innovador, hemos facilitado la inversión sostenible y el desarrollo económico en regiones ricas en litio, posicionándolo como un activo digital de alto valor en el mercado global.",
+    "p4": "Nuestra billetera oficial es la ",
+    "p5":"Nuestro contrato POLYGON es ",
     "descripcion atomico p1": " Atómico3 es un token que representa la tokenización de activos mineros, respaldados por reservas de litio certificadas bajo normas ni 43-101. Este proceso digitaliza las reservas de litio, permitiendo su comercialización en plataformas blockchain.",
     "descripcion atomico p2": "Atómico3 democratiza el acceso a la inversión en recursos naturales, ofreciendo transparencia, seguridad y liquidez. Con su enfoque innovador, Atómico3 facilita la inversión sostenible y el desarrollo económico en regiones ricas en litio, posicionándolo como un activo digital de alto valor en el mercado global.",
     "criptoactivo responsable": "Criptoactivo Responsable",
