--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -223,9 +223,12 @@
     "conectar tu wallet p1": "To perform the necessary operations to invest in Atómico3, it is essential that your wallet is connected.",
     "conectar tu wallet p2": "Watch the video below and learn how to do it!",
     "peer to peer": "What is Peer to Peer?",
-    "peer to peer p1": "P2P or peer-to-peer payments (literally, from person to person) are instant transfers between individuals made through a digital platform. In this case, they are sent between digital wallets, exchanging AT3 tokens for USDT or USDC.",
+    "peer to peer p1": "P2P or peer-to-peer purchases (literally, person-to-person) are instant transfers between individuals that take place through a digital platform. In this case, they are sent between digital wallets, with AT3 tokens on one side and USDT or USDC on the other.",
     "peer to peer p2": "This way, you can buy your Atomics directly from us using the official wallet 0XAFF655C15C943121DEA79B67C47AC9BD2253FD65, paying with your USDT or USDC.",
-    "peer to peer p2.1": "Remember that for this, you need to connect your wallet. If you don't know how to do it, you can watch the tutorials below.",
+    "peer to peer p2.1": "You can acquire Atomics by clicking the button below or via a bank transfer.",
+    "peer to peer p2.1.1": " To use this second option, you must send us an email to",
+    "peer to peer p2.1.2": " requesting the purchase via bank transfer and providing all your details so that we can contact you and complete the bank-to-bank transfer.",
+    "peer to peer p2.2": "Remember that for this, you need to connect your wallet. If you don't know how to do it, you can watch the tutorials below.",
     "peer to peer p3": "How to do Peer to Peer?",
     "peer to peer p4": "Learn quickly and easily how to do it by following the steps below!",
     "peer to peer p5": "Click on the video and start investing today!"
