--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -222,7 +222,10 @@
     "peer to peer": "¿Qué es Peer to Peer?",
     "peer to peer p1": " Las compras P2P o peer-to-peer (literalmente, de persona a persona), son transferencias instantáneas entre particulares que se realizan a través de una plataforma digital, en este caso, se envían entre billeteras digitales, por un lado, los token de AT3 contra los USDT o USDC. ",
     "peer to peer p2": "De esta forma podes comprar tus atomicos directamente de nosotros desde la billetera oficial 0XAFF655C15C943121DEA79B67C47AC9BD2253FD65, pagandolos con tus USDT o USDC.",
-    "peer to peer p2.1": "Recuerda que para esto necesitas conectar tu wallet. Si no sabes como hacerlo, puedes ver los tutoriales debajo.",
+    "peer to peer p2.1": " Puedes adquirir Atómicos haciendo click en el botón que se encuentra debajo o mediante una transferencia bancaria. ",
+    "peer to peer p2.1.1": "Para acudir a esta segunda opción debes enviarnos un correo electrónico a",
+    "peer to peer p2.1.2": " solicitando la compra por transferencia bancaria y consignando todos tus datos para que podamos contactarte y realizar la transferencia bancaria de cuenta a cuenta.",
+    "peer to peer p2.2": "Recuerda que para esto necesitas conectar tu wallet. Si no sabes como hacerlo, puedes ver los tutoriales debajo.",
     "peer to peer p3": "¿Cómo hacer Peer to Peer?",
     "peer to peer p4": "¡Aprende fácil y rápidamente como hacerlo siguiendo los pasos a continuación!",
     "peer to peer p5": "¡Dale click al video y empieza a invertir hoy!"
