--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -29,7 +29,6 @@
     "proyectos de tokenizacion": "Tokenization projects",
     "nuestros proyectos": "Our Proyects",
     "informacion sobre litio": "Information about Lithium"
-
   },
   "nosotros": {
     "title": "We are a company legally incorporated in Paraguay, dedicated to the development and optimization of mining activity. We provide them with the tool of tokenization of certified lithium reserves, seeking to innovate and revolutionize the electromobility industry. ",
@@ -187,7 +186,9 @@
     "noticias": "Press and Media",
     "n1": "Increase in the price of lithium boosts the Argentine Atómico3 cryptocurrency as a solid investment option",
     "n2": "The valorization of lithium in Latin America: perspectives, projections and its impact on the global market",
-    "n3": "Atómico3, the Argentine cryptocurrency linked to lithium, reduces its emission to make it sustainable over time"
+    "n3": "Atómico3, the Argentine cryptocurrency linked to lithium, reduces its emission to make it sustainable over time",
+    "n4": "What mineral could reach U$S 8.7 billion in exports by 2030?",
+    "n5": "The Latin American Lithium Chamber raised to the mining secretary the need for the mineral price to be set in the country and not in London."
   },
   "team": {
     "nuestro equipo": "Our Team",
