--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -189,6 +189,8 @@
     "n3": "Atómico3, the Argentine cryptocurrency linked to lithium, reduces its emission to make it sustainable over time",
     "n4": "What mineral could reach U$S 8.7 billion in exports by 2030?",
     "n5": "The Latin American Lithium Chamber raised to the mining secretary the need for the mineral price to be set in the country and not in London."
+    ,"n6": "Little progress in the formation of a regional capital market for lithium."
+    
   },
   "team": {
     "nuestro equipo": "Our Team",
