--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -186,7 +186,10 @@
     "n2": "La valorización del litio en Latinoamérica: perspectivas, proyecciones y su impacto en el mercado global",
     "n3": "Atómico3, la criptomoneda argentina ligada al litio reduce su emisión para que sea sostenible en el tiempo",
     "n4": "Cuál es el mineral que podría alcanzar los U$S 8.700 millones en exportaciones para 2030",
-    "n5": "La Cámara Latinoamericana del litio planteó al secretario de minería la necesidad de que el precio del mineral sea fijado en el país y no en Londres."
+    "n5": "La Cámara Latinoamericana del litio planteó al secretario de minería la necesidad de que el precio del mineral sea fijado en el país y no en Londres.",
+    "n6": "Pocos avances en la conformación de un mercado de capitales regional para el litio."
+
+
   },
   "team": {
     "nuestro equipo": "Nuestro Equipo",
